--- a/_posts/2023-02-14-MOU.md
+++ b/_posts/2023-02-14-MOU.md
@@ -10,7 +10,7 @@ tags: [news]
 
 ![dataset1](/img/news/mou.png)
 
-□ Hallym University (President Yang-Hee Choi) and HM Company (CEO Geun-Ho Jo) established an Industry-Academia Convergence Research Institute for promoting industry-academia cooperation and talent development and signed a business agreement for joint development.
+□ On February 14, 2023, Hallym University (President Yang-Hee Choi) and HM Company (CEO Geun-Ho Jo) signed a business agreement to promote industry-academia cooperation and talent development for the establishment of an Industry-Academia Convergence Research Institute.
 
 □ At the agreement ceremony held on the 14th (Tuesday), practical workers including President Choi Yang-hee and HM Company Vice President Lee Yong-hoon exchanged an agreement on mutual cooperation.
 
