Edited post layout

--- a/_posts/2022-11-04-ACK.md
+++ b/_posts/2022-11-04-ACK.md
@@ -6,7 +6,7 @@ icon: star-o
 tags: [seminar, review]
 ---
 
-# A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction
+**A Study on Elements of Crime Facts and Visualizing the Storyline through Named Entity Recognition and Event Extraction**
 
 On November 4th, 2022, there was a thesis presentation by graduate student Yuna Lee at Hallym University in Chuncheon, Gangwon Province.
 
