--- a/_posts/2023-02-14-MOU.md
+++ b/_posts/2023-02-14-MOU.md
@@ -6,20 +6,20 @@ icon: star-o
 tags: [news]
 ---
 
-□ On February 14, 2023, Hallym University (President Yang-Hee Choi) and HM Company (CEO Geun-Ho Jo) signed a business agreement to promote industry-academia cooperation and talent development for the establishment of an Industry-Academia Convergence Research Institute.
+On February 14, 2023, Hallym University (President Yang-Hee Choi) and HM Company (CEO Geun-Ho Jo) signed a business agreement to promote industry-academia cooperation and talent development for the establishment of an Industry-Academia Convergence Research Institute.
 
-□ Practical workers including President Choi Yang-hee and HM Company Vice President Lee Yong-hoon exchanged an agreement on mutual cooperation.
+Practical workers, including President Yang-hee Choi and HM Company Vice President Lee Yong-hoon, exchanged an agreement on mutual cooperation.
 
-□ The purpose of this agreement is to promote academic development and friendly relations through the establishment of an industry-academia convergence research institute specializing in AI-based crime information analysis and legal analysis.
+The purpose of this agreement is to promote academic development and friendly relations through the establishment of an industry-academia convergence research institute specializing in AI-based crime information analysis and legal analysis.
 
-□ The main contents of this agreement are comprehensive academic and research exchanges between the institutions, training of experts in AI crime analysis through internships, mutual support of facilities, educational materials, and research materials, joint academic events, and cooperation for joint development and friendly relations.
+The main contents of this agreement include comprehensive academic and research exchanges between the institutions, training of experts in AI crime analysis through internships, mutual support of facilities, educational materials, and research materials, joint academic events, and cooperation for joint development and friendly relations.
 
-□ At the agreement ceremony, the <i>Center for Security Data Science at the National Police University</i>, a national institution for the development of security talent (Director Ji-on Kim), presented comprehensive exchange plans for joint research and mutual exchanges with the two institutions.
+At the agreement ceremony, the Center for Security Data Science at the National Police University, a national institution for the development of security talent (Director Ji-on Kim), presented comprehensive exchange plans for joint research and mutual exchanges with the two institutions.
 
-□ President Choi Yang-hee said, "Through this agreement and seminar, we can expect academic convergence in various fields such as law, administration, and AI by cooperating with Hallym University, HM Company, and the National Police University." He added, "I hope that this occasion will be a catalyst for the establishment of a world-class administrative service model."
+President Yang-hee Choi said, "Through this agreement and seminar, we can expect academic convergence in various fields such as law, administration, and AI by cooperating with Hallym University, HM Company, and the National Police University." He added, "I hope that this occasion will be a catalyst for the establishment of a world-class administrative service model."
 
-□ Vice President of HM Company Lee Yong-hoon said, "The joint research with Hallym University, which has been ongoing since 2019, will further develop through the establishment of an industry-academia convergence research institute and the agreement ceremony," and "HM Company will spare no effort in supporting the development of the Industry-Academia Convergence Research Institute with Hallym University."
+Vice President of HM Company, Lee Yong-hoon, said, "The joint research with Hallym University, which has been ongoing since 2019, will further develop through the establishment of an industry-academia convergence research institute and the agreement ceremony." He also stated, "HM Company will spare no effort in supporting the development of the Industry-Academia Convergence Research Institute with Hallym University."
 
-□ HM Company is the only KOLAS-certified private testing agency in Korea and is a professional company specializing in digital forensics internal audits that combines AI with crime/legal analysis and performs various research.
+HM Company is the only KOLAS-certified private testing agency in Korea and is a professional company specializing in digital forensics internal audits that combine AI with crime/legal analysis and conduct various research.
 
 ![dataset1](/img/news/mou.png)
