updated 5 posts and 7pics

--- a/_posts/2023-02-14-MOU.md
+++ b/_posts/2023-02-14-MOU.md
@@ -20,6 +20,6 @@ Vice President Lee Yong-hoon of HM Company mentioned, "The joint research collab
 
 HM Company is the only KOLAS-certified private testing agency in Korea, specializing in digital forensics internal audits. They combine AI with crime/legal analysis and conduct various research activities.
 
-
-
 ![dataset1](/img/news/mou.png)
+
+<i>"Hallym University's collaboration with HM Company to establish an Industry-Academia Convergence Research Institute for AI-based crime information analysis and legal analysis showcases their commitment to fostering industry-academia cooperation and talent development. This partnership has the potential to advance research, promote academic development, and create a world-class administrative service model."</i>
