edited some titles

--- a/_posts/2023-06-17-21-KCC.md
+++ b/_posts/2023-06-17-21-KCC.md
@@ -5,12 +5,11 @@ author: 2023seohee
 icon: star-o
 tags: [news,workshop, review]
 ---
-
-**"Designing the Future of Computing for the Next 50 Years: Leading Together from the Past 50 Years to a New Era."**
-
-![dataset1](/img/news/kcc-group.jpg)
+Designing the Future of Computing for the Next 50 Years: Leading Together from the Past 50 Years to a New Era
 
 From June 18th to 20th, 2023, the Korea Computer Congress took place at the Ramada Plaza in Jeju Hotel. This highly anticipated conference brought together researchers, professionals, and enthusiasts in the field of computing. Notably, the prestigious LIFS lab made a significant contribution to the event by having four papers published in the artificial intelligence domain.
+
+![dataset1](/img/news/kcc-group.jpg)
 
 Among the talented researchers from LIFS lab, students Choi Ari, Gu Yeri, and Park Yerin had the honor of presenting their papers during the Oral session. Their research showcased innovative advancements in artificial intelligence and offered valuable insights into emerging technologies and applications.
 
@@ -35,13 +34,8 @@ In Gu Yeri's paper, we propose a system for extracting argument structures that 
 
 ![dataset1](/img/news/kcc-jeewon.jpg)
 
-In Park Jeewon's paper, the study evaluated the inference process of LSAT problem-solving using the GPT-3.5 and GPT-4 models with two different prompts. The application of the Zero-shot+CoT prompt revealed that the performance of GPT-3.5 deteriorated in all sections, as shown in Table 3. Analyzing the problem-solving process of GPT, it was found that prompt design significantly influences GPT utilization, and potential errors in GPT that fail to meet the specified prompt conditions were identified in Table 6. This study suggests that there is room for improvement in the inference capabilities of GPT based on these errors. Therefore, future research will focus on developing more effective prompts to overcome the limitations of the model and utilize GPT in the legal domain.
+In Park Jeewon's paper, the study evaluated the inference process of LSAT problem-solving using the GPT-3.5 and GPT-4 models with two different prompts. The application of the Zero-shot+CoT prompt revealed that the performance of GPT-3.5 deteriorated in all sections. Analyzing the problem-solving process of GPT, it was found that prompt design significantly influenced GPT utilization, and potential errors in GPT that fail to meet the specified prompt conditions were identified. 
+This study suggests that there is room for improvement in the inference capabilities of GPT based on these errors. Therefore, future research will focus on developing more effective prompts to overcome the limitations of the model and utilize GPT in the legal domain.
 
 &nbsp;
-The papers presented by these dedicated students from LIFS lab not only demonstrated their expertise and commitment but also highlighted the lab's exceptional research contributions. Their work undoubtedly added significant value to the Korea Computer Congress, fostering intellectual discussions and pushing the boundaries of computing knowledge and innovation.
-
-&nbsp;
-
-<i>"If you want to learn more about the paper, please click on the attached link and search for it on the related website."</i>
-
-https://www.kiise.or.kr/academyEng/main/getContent.faEng?content_no=1&MENU_ID=010100
+The papers presented by these dedicated students from LIFS lab not only demonstrated their expertise and commitment but also highlighted the lab's exceptional research contributions. Their work undoubtedly added significant value to the Korea Computer Congress 2023 (KCC 2023), fostering intellectual discussions and pushing the boundaries of computing knowledge and innovation.
